# logger

./: .gitignore  AFormatter_8hpp.html  AFormatter_8hpp_source.html  ALogger_8cpp.html  ALogger_8hpp.html  ALogger_8hpp_source.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  DefaultFilter_8cpp.html  DefaultFilter_8hpp.html  DefaultFilter_8hpp_source.html  DefaultFormatter_8cpp.html  DefaultFormatter_8hpp.html  DefaultFormatter_8hpp_source.html  IFilter_8hpp.html  IFilter_8hpp_source.html  LICENSE.txt  LogEntry_8hpp.html  LogEntry_8hpp_source.html  LogMgr_8cpp.html  LogMgr_8hpp.html  LogMgr_8hpp_source.html  Log_8hpp.html  Log_8hpp_source.html  README.md  StderrLogger_8hpp_source.html  StdoutLogger_8cpp.html  StdoutLogger_8hpp.html  StdoutLogger_8hpp_source.html  annotated.html  classLog_1_1AFormatter-members.html  classLog_1_1AFormatter.html  classLog_1_1ALogger-members.html  classLog_1_1ALogger.html  classLog_1_1DefaultFilter-members.html  classLog_1_1DefaultFilter.html  classLog_1_1DefaultFormatter-members.html  classLog_1_1DefaultFormatter.html  classLog_1_1IFilter-members.html  classLog_1_1IFilter.html  (+36 more)
logger/: AFormatter.hpp  ALogger.cpp  ALogger.hpp  CMakeLists.txt  DefaultFilter.cpp  DefaultFilter.hpp  DefaultFormatter.cpp  IFilter.hpp  Log.hpp  LogEntry.hpp  LogMgr.cpp  LogMgr.hpp  StdoutLogger.cpp  StdoutLogger.hpp
logger/includes/: AFormatter.hpp  ALogger.hpp  DefaultFilter.hpp  DefaultFormatter.hpp  IFilter.hpp  Log.hpp  LogMgr.hpp  SimpleFormatter.hpp  StdoutLogger.hpp  SyslogLogger.hpp
logger/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  (+5 more)
(+65 files in other folders)
